--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -101,7 +101,7 @@
       <AdditionalDependencies>Engine.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>""D:\Daniel\Artemis\Engine\x64\Release\" ShaderCompiler.exe "D:\Daniel\Artemis\Engine\Shaders" "D:\Daniel\Artemis\Engine\x64\$(Configuration)\Shaders" "C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x64\fxc.exe""</Command>
+      <Command>D:\Daniel\Artemis\Engine\x64\Debug\ShaderCompiler.exe</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -123,7 +123,7 @@
       <AdditionalDependencies>Engine.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>"D:\Daniel\Artemis\Engine\x64\Release\ShaderCompiler.exe"</Command>
+      <Command>""D:\Daniel\Artemis\Engine\x64\Release\" ShaderCompiler.exe "D:\Daniel\Artemis\Engine\Shaders" "D:\Daniel\Artemis\Engine\x64\Release\Shaders" "C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x64\fxc.exe""</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -141,7 +141,7 @@
       <AdditionalDependencies>Engine.lib;Engine.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>""D:\Daniel\Artemis\Engine\x64\Release\" ShaderCompiler.exe "D:\Daniel\Artemis\Engine\Shaders" "D:\Daniel\Artemis\Engine\x64\$(Configuration)\Shaders" "C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x64\fxc.exe""</Command>
+      <Command>D:\Daniel\Artemis\Engine\x64\Debug\ShaderCompiler.exe</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -163,7 +163,7 @@
       <AdditionalDependencies>Engine.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>"D:\Daniel\Artemis\Engine\x64\Release\ShaderCompiler.exe"</Command>
+      <Command>""D:\Daniel\Artemis\Engine\x64\Release\" ShaderCompiler.exe "D:\Daniel\Artemis\Engine\Shaders" "D:\Daniel\Artemis\Engine\x64\Release\Shaders" "C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x64\fxc.exe""</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
